# query2table

./: AGENTS.md  Makefile  README.md  TASKS.md  package-lock.json  package.json  vite.config.js
.ai-factory/: ARCHITECTURE.md  DESCRIPTION.md  (+1 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  mod.rs  run.rs  settings.rs
src-tauri/src/export/: csv_export.rs  json_export.rs  mod.rs  xlsx_export.rs
src-tauri/src/orchestrator/: budget_tracker.rs  events.rs  extract_pool.rs  fetch_pool.rs  image_pipeline.rs  mod.rs  pipeline.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/providers/http/: client.rs  mod.rs  rate_limiter.rs  robots.rs
src-tauri/src/providers/llm/: manager.rs  mod.rs  ollama.rs  openrouter.rs  types.rs
src-tauri/src/providers/search/: brave.rs  manager.rs  mod.rs  serper.rs  types.rs
src-tauri/src/roles/: deduplicator.rs  document_parser.rs  extractor.rs  image_ranker.rs  image_searcher.rs  mod.rs  pdf_parser.rs  query_expander.rs  query_interpreter.rs  schema_planner.rs  search_executor.rs  search_planner.rs  stopping_controller.rs  validator.rs
src-tauri/src/storage/: db.rs  models.rs  repository.rs
src-tauri/src/utils/: id.rs  logging.rs  mod.rs  retry.rs
src-tauri/tests/: live_pipeline_test.rs  pipeline_integration.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/: expand_response.json  extract_response.json  extract_response_duplicates.json  interpret_response.json  schema_response.json  search_plan_response.json
(+27 files in other folders)
