[package]
name = "query2table"
version = "0.1.0"
description = "Natural-language research queries to structured tables"
authors = ["hightemp"]
edition = "2021"

[lib]
name = "query2table_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }
governor = "0.8"
url = "2"
async-trait = "0.1"
scraper = "0.22"
ammonia = "4"
strsim = "0.11"
regex = "1"

[dev-dependencies]
tempfile = "3"
mockall = "0.13"

